# DecaMoveSDK

./: LICENSE  README.md
ExampleProjects/DecaMoveUnityDemo/: .gitignore  README.md  unityProject.vrmanifest
ExampleProjects/DecaMoveUnityDemo/ProjectSettings/: EditorBuildSettings.asset  ProjectSettings.asset
ExampleProjects/DecaMoveUnityDemo/Python/: pythonController.py  requirements.txt
ExampleProjects/DecaMoveUnityOculusQuestDemo/ProjectSettings/: EditorBuildSettings.asset  ProjectSettings.asset
ExampleProjects/DecaMoveUnrealDemo/: .gitignore  TestTopDown.uproject
ExampleProjects/DecaMoveUnrealDemo/Config/: DefaultEditor.ini  DefaultEngine.ini  DefaultGame.ini  DefaultInput.ini
ExampleProjects/DecaMoveUnrealDemo/Source/: TestTopDown.Target.cs  TestTopDownEditor.Target.cs
ExampleProjects/DecaMoveUnrealOculusQuestDemo/: .gitignore  DecaSDKOculusUnreal.uproject
NativeSDK/: DecaSDKConfig.cmake  README.md
NativeSDK/dotnet/: DecaSDK.cs  DecaSDKUnity.cs
NativeSDK/examples/: CMakeLists.txt
NativeSDK/examples/dotnet/: CMakeLists.txt  Main.cs
NativeSDK/examples/native/: CMakeLists.txt  main.cpp
NativeSDK/lib/: deca_sdk.lib
UnityDecaSDK/Materials/: DecaOverlay.mat
UnityDecaSDK/Prefabs/: DecaMove.prefab
UnityDecaSDK/Scenes/: Example Scene.unity
UnityDecaSDK/Scripts/: DecaMoveBehaviour.cs  DecaMoveCalibration.cs  DecaMoveHapticTester.cs
UnityDecaSDK/dotnet/: DecaSDKUnity.cs
UnitySDK/Scripts/: DecaMoveBehaviour.cs
UnrealSDK/: DecaMoveSDK.uplugin
UnrealSDK/Content/: DecaMove.uasset  DecaMoveDemo.umap  DecaMoveDemo_BuiltData.uasset
(+80 files in other folders)
